Adding input-transparent theme, adding new color functions

--- a/docs/views/forms.html
+++ b/docs/views/forms.html
@@ -17,7 +17,7 @@
     <div class="row cols-gutter">    
         <div class="field">
             <label for="input_3">Email Address:</label>
-            <input type="text" id="input_3">
+            <input type="text" id="input_3" class="darken">
         </div>
     </div>
 </div>
