--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -106,6 +106,7 @@
     display: inline-block;
     margin: $button-group-margin;
     margin-bottom: 0;
+    vertical-align: middle;
 }
 
 %button-group-vertical {
