--- a/scss/modules/forms/_module.scss
+++ b/scss/modules/forms/_module.scss
@@ -15,6 +15,9 @@ $form-input-theme: default !default;
 $form-input-scale: $form-scale !default;
 $form-input-padding: $form-padding !default;
 $form-input-border-width: $form-border-width !default;
+$form-input-bgcolor: $color-white !default;
+$form-input-bgcolor-lighten: rgba(255, 255, 255, 0.3) !default;
+$form-input-bgcolor-darken: rgba(0, 0, 0, 0.05) !default;
 
 // Label Settings
 $form-label-style: default !default;
