--- a/scss/modules/layers/_module.scss
+++ b/scss/modules/layers/_module.scss
@@ -10,6 +10,7 @@ $overlay-theme: default !default;
 $overlay-color-light: white !default;
 $overlay-color-dark: black !default;
 $overlay-opacity: 0.3 !default;
+$overlay-z-index: 10 !default;
 
 // Container Settings
 $container-min-width: false !default;
