--- a/scss/modules/tables/_module.scss
+++ b/scss/modules/tables/_module.scss
@@ -12,6 +12,7 @@ $table-text-align: left !default;
 
 $table-cell-padding: 0.5rem !default;
 $table-cell-border-width: $table-border-width !default;
+$table-cell-type-scale: -1 !default;
 
 $table-thead-padding: $table-cell-padding !default;
 $table-thead-type-scale: -1 !default;
