--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -33,6 +33,11 @@ $color-gray: #525252 !default;
 $color-gray-light: #EFEFEF !default;
 $color-white: #FFF !default;
 
+$color-lighten-opacity: 0.3 !default;
+$color-darken-opacity: 0.3 !default;
+$color-lighten: rgba(255, 255, 255, $color-lighten-opacity) !default;
+$color-darken: rgba(0, 0, 0, $color-darken-opacity) !default;
+
 $color-success: #96CC69 !default;
 $color-warning: #FFCC5C !default;
 $color-failure: #C44741 !default;
