--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -16,6 +16,7 @@
     'modules/layers/_module',
     'modules/_reset',
     'modules/_layout',
+    'modules/shapes/_module',
     'modules/media/_module',
     'modules/grid/_module',
     'modules/type/_module',
