--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -7196,7 +7196,7 @@ blockquote footer cite, em, .italics {
 }
 
 /* line 132, ../scss/modules/type/_components.scss */
-ul.inline li, .nowrap, .dropdown-container > menu ul li, .dropdown-container > .dropdown ul li, nav ul li, button, .button, input[type=button], input[type=submit], .badge, .label {
+ul.inline li, .nowrap, .dropdown-container > menu ul li, .dropdown-container > .dropdown ul li, nav ul li, button, .button, input[type=button], input[type=submit] {
   white-space: nowrap;
 }
 
@@ -7864,106 +7864,126 @@ body nav.dark li:hover {
   background-color: #363636;
 }
 
-/* line 156, ../scss/modules/nav/_themes.scss */
+/* line 163, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu, body .dropdown-container > .dropdown {
   background-color: white;
   border-style: solid;
   border-color: #525252;
   border-width: 1px;
 }
-/* line 134, ../scss/modules/nav/_themes.scss */
+/* line 139, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu li, body .dropdown-container > .dropdown li {
   border: none;
 }
-/* line 140, ../scss/modules/nav/_themes.scss */
+/* line 142, ../scss/modules/nav/_themes.scss */
+body .dropdown-container > menu li, body .dropdown-container > .dropdown li, body .dropdown-container > menu li > a, body .dropdown-container > .dropdown li > a {
+  color: #1c1c1c;
+}
+/* line 147, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu li:hover > a, body .dropdown-container > .dropdown li:hover > a {
   background-color: #024959;
 }
-/* line 143, ../scss/modules/nav/_themes.scss */
+/* line 150, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu li.hr, body .dropdown-container > .dropdown li.hr, body .dropdown-container > menu li.separator, body .dropdown-container > .dropdown li.separator {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #efefef;
 }
-/* line 159, ../scss/modules/nav/_themes.scss */
+/* line 166, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.primary, body .dropdown-container > .primary.dropdown {
   background-color: white;
   border-style: solid;
   border-color: #525252;
   border-width: 1px;
 }
-/* line 134, ../scss/modules/nav/_themes.scss */
+/* line 139, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.primary li, body .dropdown-container > .primary.dropdown li {
   border: none;
 }
-/* line 140, ../scss/modules/nav/_themes.scss */
+/* line 142, ../scss/modules/nav/_themes.scss */
+body .dropdown-container > menu.primary li, body .dropdown-container > .primary.dropdown li, body .dropdown-container > menu.primary li > a, body .dropdown-container > .primary.dropdown li > a {
+  color: #1c1c1c;
+}
+/* line 147, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.primary li:hover > a, body .dropdown-container > .primary.dropdown li:hover > a {
   background-color: #024959;
 }
-/* line 143, ../scss/modules/nav/_themes.scss */
+/* line 150, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.primary li.hr, body .dropdown-container > .primary.dropdown li.hr, body .dropdown-container > menu.primary li.separator, body .dropdown-container > .primary.dropdown li.separator {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #efefef;
 }
-/* line 160, ../scss/modules/nav/_themes.scss */
+/* line 167, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.secondary, body .dropdown-container > .secondary.dropdown {
   background-color: white;
   border-style: solid;
   border-color: #525252;
   border-width: 1px;
 }
-/* line 134, ../scss/modules/nav/_themes.scss */
+/* line 139, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.secondary li, body .dropdown-container > .secondary.dropdown li {
   border: none;
 }
-/* line 140, ../scss/modules/nav/_themes.scss */
+/* line 142, ../scss/modules/nav/_themes.scss */
+body .dropdown-container > menu.secondary li, body .dropdown-container > .secondary.dropdown li, body .dropdown-container > menu.secondary li > a, body .dropdown-container > .secondary.dropdown li > a {
+  color: #1c1c1c;
+}
+/* line 147, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.secondary li:hover > a, body .dropdown-container > .secondary.dropdown li:hover > a {
   background-color: #e74c30;
 }
-/* line 143, ../scss/modules/nav/_themes.scss */
+/* line 150, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.secondary li.hr, body .dropdown-container > .secondary.dropdown li.hr, body .dropdown-container > menu.secondary li.separator, body .dropdown-container > .secondary.dropdown li.separator {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #efefef;
 }
-/* line 161, ../scss/modules/nav/_themes.scss */
+/* line 168, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.light, body .dropdown-container > .light.dropdown {
   background-color: white;
   border-style: solid;
   border-color: #525252;
   border-width: 1px;
 }
-/* line 134, ../scss/modules/nav/_themes.scss */
+/* line 139, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.light li, body .dropdown-container > .light.dropdown li {
   border: none;
 }
-/* line 140, ../scss/modules/nav/_themes.scss */
+/* line 142, ../scss/modules/nav/_themes.scss */
+body .dropdown-container > menu.light li, body .dropdown-container > .light.dropdown li, body .dropdown-container > menu.light li > a, body .dropdown-container > .light.dropdown li > a {
+  color: #1c1c1c;
+}
+/* line 147, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.light li:hover > a, body .dropdown-container > .light.dropdown li:hover > a {
   background-color: #efefef;
 }
-/* line 143, ../scss/modules/nav/_themes.scss */
+/* line 150, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.light li.hr, body .dropdown-container > .light.dropdown li.hr, body .dropdown-container > menu.light li.separator, body .dropdown-container > .light.dropdown li.separator {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #efefef;
 }
-/* line 162, ../scss/modules/nav/_themes.scss */
+/* line 169, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.dark, body .dropdown-container > .dark.dropdown {
   background-color: white;
   border-style: solid;
   border-color: #525252;
   border-width: 1px;
 }
-/* line 134, ../scss/modules/nav/_themes.scss */
+/* line 139, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.dark li, body .dropdown-container > .dark.dropdown li {
   border: none;
 }
-/* line 140, ../scss/modules/nav/_themes.scss */
+/* line 142, ../scss/modules/nav/_themes.scss */
+body .dropdown-container > menu.dark li, body .dropdown-container > .dark.dropdown li, body .dropdown-container > menu.dark li > a, body .dropdown-container > .dark.dropdown li > a {
+  color: #1c1c1c;
+}
+/* line 147, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.dark li:hover > a, body .dropdown-container > .dark.dropdown li:hover > a {
   background-color: #363636;
 }
-/* line 143, ../scss/modules/nav/_themes.scss */
+/* line 150, ../scss/modules/nav/_themes.scss */
 body .dropdown-container > menu.dark li.hr, body .dropdown-container > .dark.dropdown li.hr, body .dropdown-container > menu.dark li.separator, body .dropdown-container > .dark.dropdown li.separator {
   border-bottom-width: 1px;
   border-bottom-style: solid;
@@ -8050,11 +8070,19 @@ textarea {
 
 /* line 54, ../scss/modules/forms/_components.scss */
 select {
+  font-size: 13.77648px ;
+  font-size: 0.86103rem ;
   display: block;
+  width: 100%;
+  -webkit-appearance: none;
+  padding: 0.5rem;
+  border-width: 1px;
+  border-style: solid;
+  z-index: 2;
   width: 100%;
 }
 
-/* line 61, ../scss/modules/forms/_components.scss */
+/* line 69, ../scss/modules/forms/_components.scss */
 label {
   display: block;
   margin-bottom: 0.25em;
@@ -8062,7 +8090,7 @@ label {
   font-size: 0.86103rem ;
 }
 
-/* line 67, ../scss/modules/forms/_components.scss */
+/* line 75, ../scss/modules/forms/_components.scss */
 label.inline {
   display: inline-block;
   padding: 0.5rem;
@@ -8256,6 +8284,17 @@ body input.darken:focus:not([type=radio]) {
   background-color: rgba(0, 0, 0, 0.05);
   color: inherit;
   border-color: rgba(0, 0, 0, 0.05);
+}
+
+/* line 109, ../scss/modules/forms/_themes.scss */
+body select {
+  background-color: #efefef;
+  border-color: #e2e2e2;
+  color: #1c1c1c;
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMHB4IiB5PSIwcHgiIHdpZHRoPSI2cHgiIGhlaWdodD0iM3B4IiB2aWV3Qm94PSIwIDAgNiAzIiBlbmFibGUtYmFja2dyb3VuZD0ibmV3IDAgMCA2IDMiIHhtbDpzcGFjZT0icHJlc2VydmUiPjxwb2x5Z29uIHBvaW50cz0iNS45OTIsMCAyLjk5MiwzIC0wLjAwOCwwICIvPjwvc3ZnPg==");
+  background-position-x: calc(100% - 1rem);
+  background-position-y: center;
+  background-repeat: no-repeat;
 }
 
 /* line 7, ../scss/modules/buttons/_components.scss */
@@ -8593,9 +8632,11 @@ body button.link, body .link.button, body input.link[type=button], body input.li
 }
 
 /* line 5, ../scss/modules/labels/_components.scss */
-.badge, .label {
+.badge, .tooltip[title]:hover:before, .label {
   font-size: 11.86196px ;
   font-size: 0.74137rem ;
+  white-space: nowrap;
+  overflow: hidden;
   text-decoration: none;
   text-transform: none;
   display: inline-block;
@@ -8612,16 +8653,16 @@ body button.link, body .link.button, body input.link[type=button], body input.li
   -o-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 25, ../scss/modules/labels/_components.scss */
-.badge:first-child, .label:first-child {
+/* line 26, ../scss/modules/labels/_components.scss */
+.badge:first-child, .tooltip[title]:first-child:hover:before, .label:first-child {
   margin-left: 0;
 }
-/* line 26, ../scss/modules/labels/_components.scss */
-.badge:last-child, .label:last-child {
+/* line 27, ../scss/modules/labels/_components.scss */
+.badge:last-child, .tooltip[title]:last-child:hover:before, .label:last-child {
   margin-right: 0;
 }
 
-/* line 29, ../scss/modules/labels/_components.scss */
+/* line 30, ../scss/modules/labels/_components.scss */
 .badge {
   font-size: 11.86196px ;
   font-size: 0.74137rem ;
@@ -8638,11 +8679,11 @@ body button.link, body .link.button, body input.link[type=button], body input.li
   -o-border-radius: 1rem;
   border-radius: 1rem;
 }
-/* line 47, ../scss/modules/labels/_components.scss */
+/* line 48, ../scss/modules/labels/_components.scss */
 .badge:empty {
   display: none;
 }
-/* line 50, ../scss/modules/labels/_components.scss */
+/* line 51, ../scss/modules/labels/_components.scss */
 .badge.top-left {
   margin: 0;
   position: absolute;
@@ -8656,7 +8697,7 @@ body button.link, body .link.button, body input.link[type=button], body input.li
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 56, ../scss/modules/labels/_components.scss */
+/* line 57, ../scss/modules/labels/_components.scss */
 .badge.top-right {
   margin: 0;
   position: absolute;
@@ -8670,7 +8711,7 @@ body button.link, body .link.button, body input.link[type=button], body input.li
   -o-transform: translateX(50%) translateY(-50%);
   transform: translateX(50%) translateY(-50%);
 }
-/* line 62, ../scss/modules/labels/_components.scss */
+/* line 63, ../scss/modules/labels/_components.scss */
 .badge.bottom-left {
   margin: 0;
   position: absolute;
@@ -8684,7 +8725,7 @@ body button.link, body .link.button, body input.link[type=button], body input.li
   -o-transform: translateX(-50%) translateY(50%);
   transform: translateX(-50%) translateY(50%);
 }
-/* line 68, ../scss/modules/labels/_components.scss */
+/* line 69, ../scss/modules/labels/_components.scss */
 .badge.bottom-right {
   margin: 0;
   position: absolute;
@@ -8699,54 +8740,88 @@ body button.link, body .link.button, body input.link[type=button], body input.li
   transform: translateX(50%) translateY(50%);
 }
 
+/* line 77, ../scss/modules/labels/_components.scss */
+.tooltip[title]:hover:before {
+  position: absolute;
+  bottom: 100%;
+  top: inherit;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  margin: 0.5rem;
+  content: attr(title);
+}
+/* line 84, ../scss/modules/labels/_components.scss */
+.tooltip[title]:hover:after {
+  content: '';
+  border-top: 0.5rem solid #024959;
+  border-left: 0.5rem solid transparent;
+  border-right: 0.5rem solid transparent;
+  position: absolute;
+  top: -0.5rem;
+  bottom: inherit;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
 /* line 23, ../scss/modules/labels/_themes.scss */
-body .badge:not(.transparent), body .label:not(.transparent) {
+body .badge:not(.transparent), body .tooltip[title]:not(.transparent):hover:before, body .label:not(.transparent) {
   background-color: #024959;
   color: #efefef;
 }
 /* line 26, ../scss/modules/labels/_themes.scss */
-body .primary.badge, body .primary.label {
+body .primary.badge, body .primary.tooltip[title]:hover:before, body .primary.label {
   background-color: #024959;
   color: #efefef;
 }
 /* line 27, ../scss/modules/labels/_themes.scss */
-body .secondary.badge, body .secondary.label {
+body .secondary.badge, body .secondary.tooltip[title]:hover:before, body .secondary.label {
   background-color: #e74c30;
   color: #efefef;
 }
 /* line 28, ../scss/modules/labels/_themes.scss */
-body .light.badge, body .light.label {
+body .light.badge, body .light.tooltip[title]:hover:before, body .light.label {
   background-color: #efefef;
   color: #363636;
 }
 /* line 29, ../scss/modules/labels/_themes.scss */
-body .dark.badge, body .dark.label {
+body .dark.badge, body .dark.tooltip[title]:hover:before, body .dark.label {
   background-color: #363636;
   color: #efefef;
 }
 /* line 31, ../scss/modules/labels/_themes.scss */
-body .success.badge, body .success.label {
+body .success.badge, body .success.tooltip[title]:hover:before, body .success.label {
   background-color: #96cc69;
   color: #efefef;
 }
 /* line 32, ../scss/modules/labels/_themes.scss */
-body .warning.badge, body .warning.label {
+body .warning.badge, body .warning.tooltip[title]:hover:before, body .warning.label {
   background-color: #ffcc5c;
   color: #363636;
 }
 /* line 33, ../scss/modules/labels/_themes.scss */
-body .failure.badge, body .failure.label {
+body .failure.badge, body .failure.tooltip[title]:hover:before, body .failure.label {
   background-color: #c44741;
   color: #efefef;
 }
 /* line 35, ../scss/modules/labels/_themes.scss */
-body .transparent.badge, body .transparent.label {
+body .transparent.badge, body .transparent.tooltip[title]:hover:before, body .transparent.label {
   background-color: transparent;
   color: false;
 }
 
 /* line 9, ../scss/modules/fields/_components.scss */
 .field {
+  overflow: hidden;
+  *zoom: 1;
+  overflow: visible;
   margin-bottom: 0.5rem;
 }
 
