--- a/scss/modules/forms/_themes.scss
+++ b/scss/modules/forms/_themes.scss
@@ -88,3 +88,28 @@
 }
 
 @include add-theme('input', $form-input-theme);
+
+// Select Theme
+@mixin theme-select-default(
+	$color: $color-light,
+	$bg-color: $color,
+	$border-color: darken($color, 5%),
+	$type-color: foreground-color($color)
+) {
+	background-color: $bg-color;
+	border-color: $border-color;
+	color: $type-color;
+	background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMHB4IiB5PSIwcHgiIHdpZHRoPSI2cHgiIGhlaWdodD0iM3B4IiB2aWV3Qm94PSIwIDAgNiAzIiBlbmFibGUtYmFja2dyb3VuZD0ibmV3IDAgMCA2IDMiIHhtbDpzcGFjZT0icHJlc2VydmUiPjxwb2x5Z29uIHBvaW50cz0iNS45OTIsMCAyLjk5MiwzIC0wLjAwOCwwICIvPjwvc3ZnPg==');
+	background-position-x: calc(100% - 1rem);
+	background-position-y: center;
+	background-repeat: no-repeat;
+}
+
+%theme-select-default {
+	%select {
+		@include theme-select-default();
+	}
+}
+
+@include add-theme('select');
+
