--- a/scss/modules/labels/_classes.scss
+++ b/scss/modules/labels/_classes.scss
@@ -14,3 +14,8 @@
     &.bottom-left { @extend %badge-bottom-left; }
     &.bottom-right { @extend %badge-bottom-right; }
 }
+
+// Tooltip Classes
+.tooltip[title] {
+    @extend %tooltip;
+}
